# knotepad

./: README.md
knotepad/: CMakeLists.txt  Messages.sh  knotepad.h  knotepad.kdev4  main.cpp
knotepad/doc/: CMakeLists.txt  index.docbook
knotepad/icons/: CMakeLists.txt  sc-apps-knotepad.svgz
knotepad/src/: CMakeLists.txt  knotepad.qrc  knotepadSettings.kcfg  knotepadSettings.kcfgc  knotepadui.rc  knotepadview.cpp  knotepadview.h  knotepadview.ui  knotepadwindow.cpp  knotepadwindow.h  main.cpp  org.example.knotepad.desktop  org.example.knotepad.metainfo.xml
